# KernRift-bootstrap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  hello  hello.kr
crates/kernrift/: Cargo.toml
crates/kernrift/src/: main.rs
crates/kernriftc/: Cargo.toml  README.md
crates/kernriftc/src/: canonical_input.rs  lib.rs  main.rs  runner.rs  telemetry.rs
crates/kernriftc/src/artifact_inspect/: asm.rs  elf.rs  format.rs  krbo.rs  mod.rs  report.rs
crates/kernriftc/src/artifact_meta/: elf.rs  emit.rs  krbo.rs  mod.rs  path.rs  report.rs
crates/kernriftc/src/backend_emit/: args.rs  mod.rs  run.rs
crates/kernriftc/src/check_verify/: args.rs  check.rs  crypto.rs  inspect.rs  mod.rs  output.rs  run.rs  verify.rs
crates/kernriftc/src/living_compiler/: args.rs  diff.rs  fix.rs  mod.rs  run.rs
crates/kernriftc/src/policy_engine/: eval.rs  mod.rs  parse.rs  profile.rs
crates/kernriftc/src/policy_engine/eval/: common.rs  mod.rs  rules.rs  summary.rs  violation.rs
crates/kernriftc/src/proposals/: diff.rs  files.rs  mod.rs  model.rs  promote.rs  run.rs  state.rs
crates/kernriftc/src/runtime/: linux_aarch64.rs  linux_x86_64.rs  macos_aarch64.rs  macos_x86_64.rs  mod.rs  windows_aarch64.rs  windows_x86_64.rs
crates/kernriftc/src/verify_artifact_meta/: args.rs  format.rs  mod.rs  report.rs
crates/kernriftc/tests/: cli_contract.rs  golden.rs  kernel_profile.rs  kr0_contract.rs  kr1_contract.rs  kr2_contract.rs  kr3_contract.rs  lc_golden.rs
crates/kernriftc/tests/cli_contract/: artifact_cli.rs  canonical_check.rs  canonical_fix.rs  canonical_migrate.rs  canonical_migrate_preview.rs  canonical_schema.rs  default_compile.rs  frontend_contracts.rs  frontend_surface.rs  governance_cli.rs  meta_docs.rs  migrate_preview_surface.rs  policy_verify.rs  schema_support.rs  support.rs
docs/: ADAPTIVE_OS_CONTEXT.md  ARCHITECTURE.md  KR0_KR3_PLAN.md  KRIR_SPEC.md  LANGUAGE.md  getting-started.md
examples/: 01_happy_check.kr  02_parse_error_missing_semicolon.kr  03_semantic_unresolved_symbol.kr  04_verify_policy_pass.kr  05_verify_fail_max_lock_depth.kr  07_contracts_schema_version_invalid.kr  08_contracts_utf8_invalid.kr  09_staged_outputs_no_write_on_deny.kr  10_edge_comments_whitespace.kr  README.md  slice_buf.kr  uart_console_branch_eq.kr  uart_console_branch_mask.kr  uart_console_branch_zero.kr  uart_console_call_return.kr  uart_console_executable.kr  uart_console_explicit_slot.kr  uart_console_probe.kr
policies/: kernel.toml
scripts/: bootstrap_rust.ps1  bootstrap_rust.sh  dist.ps1  dist.sh  fast_gate.ps1  fast_gate.sh  inspect_fixture_artifacts.sh  install-linux.sh  install-macos.sh  install-windows.ps1  local_gate.ps1  local_gate.sh  vendor_deps.ps1  vendor_deps.sh
(+215 files in other folders)
