[workspace]
members = [
  "crates/parser",
  "crates/hir",
  "crates/krir",
  "crates/passes",
  "crates/emit",
  "crates/kernriftc",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["KernRift Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
