[workspace]
members = [
  "crates/parser",
  "crates/hir",
  "crates/krir",
  "crates/passes",
  "crates/emit",
  "crates/kernrift",
  "crates/kernriftc",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["KernRift Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lz4_flex = "0.11"
