[package]
name = "kernrift"
version = "1.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "kernrift"
path = "src/main.rs"

[dependencies]
krir = { path = "../krir" }
lz4_flex.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Memory", "Win32_System_Diagnostics_Debug"] }
