[package]
name = "kernriftc"
version = "0.2.8"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
base64 = "0.22"
ed25519-dalek = "2"
emit = { path = "../emit" }
hir = { path = "../hir" }
krir = { path = "../krir" }
parser = { path = "../parser" }
passes = { path = "../passes" }
jsonschema = "0.18"
sha2 = "0.10"
serde.workspace = true
serde_json.workspace = true
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json.workspace = true
